--- a/index.css
+++ b/index.css
@@ -1,20 +1,242 @@
+:root {
+    --color-1: #137;
+    --color-1a: rgba(17, 51, 119, 0);
+    --color-1a: #1370;
+    --color-2: #58d;
+    --color-3: #7af;
+}
+
+html {
+    font-family: 'Avenir', sans-serif;
+    background: black;
+}
+
+#map {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 0;
+}
+
+#map iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+#legend {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background: gray;
+    background: var(--color-2);
+    color: white;
+    color: var(--color-3);
+}
+#legend.noclass:before {
+    content: 'No results.';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    text-align: center;
+    display: block;
+    z-index: 4;
+}
+
+.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+}
+
+@media all and (orientation: landscape) {
+	#map {
+		bottom: 0;
+		right: 55%;
+	}
+    #legend {
+        left: 45%;
+        top: 0;
+    }
+}
+
+@media all and (orientation: portrait) {
+	#map {
+		bottom: 55%;
+		right: 0;
+	}
+    #legend {
+        left: 0;
+        top: 45%;
+    }
+}
+
+form {
+    display: inline;
+}
+
 ul {
     display: flex;
     list-style-type: none;
     padding: 0;
+    margin: 0;
 }
 
 li {
     flex: 1;
+    background: var(--color-1);
     text-align: center;
+    opacity: 0.5;
+    padding: 6px;
+    margin: 1px;
     cursor: pointer;
 }
-
-table {
-    background: black;
-    border-spacing: 1px;
+li:hover, li.selected {
+    opacity: 1;
 }
 
-th, td {
-    background: white;
+#scanline {
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    background: gray;
+    background: var(--color-2);
+    pointer-events: none;
+    z-index: 1;
+}
+
+#scroller {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch; /* ios */
+}
+
+.timeheader {
+    position: -webkit-sticky; /* safari */
+    position: sticky;
+    left: 0;
+    height: 24px;
+    width: 100%;
+    background: linear-gradient(to right,
+        black 0%,
+        transparent 10%, transparent 40%,
+        black 50%,
+        transparent 60%, transparent 90%,
+        black 100%
+    );
+    background: linear-gradient(to right,
+        var(--color-1) 0%,
+        var(--color-1a) 10%, var(--color-1a) 40%,
+        var(--color-1) 50%,
+        var(--color-1a) 60%, var(--color-1a) 90%,
+        var(--color-1) 100%
+    );
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: -24px;
+    z-index: 3;
+}
+.timeheader:after {
+    content: attr(id);
+    text-transform: uppercase;
+}
+
+.hidden, .hidden + .timetable {
+    display: none;
+}
+
+.timetable {
+    min-width: 1500px;
+    margin-left: 55px;
+}
+
+.timeline {
+    position: relative; /* .timespan position */
+    font-variant: small-caps;
+    margin-bottom: 1px;
+    display: flex;
+}
+.timeline:first-child {
+    height: 24px;
+    background: black;
+    background: var(--color-1);
+    z-index: 2;
+}
+.timeline:before {
+    content: attr(data-room);
+    position: -webkit-sticky; /* safari */
+    position: sticky;
+    left: 0;
+    width: 55px;
+    background: black;
+    background: var(--color-1);
+    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-left: -55px;
+    z-index: 3;
+}
+.timeline:first-child:before {
+    content: '';
+    position: relative;
+}
+
+.timeunit {
+    flex: 1;
+    height: 4px;
+    border: solid black;
+    border: solid var(--color-1);
+    border-width: 2px 1px 0 1px;
+    z-index: 2;
+    pointer-events: none;
+}
+.timeline:first-child .timeunit {
+    height: auto;
+    color: gray;
+    color: var(--color-2);
+    font-size: 12px;
+    border: none;
+    line-height: 24px;
+}
+.timeline:first-child .timeunit:after {
+    vertical-align: text-top;
+}
+.timeline:first-child .timeunit:nth-child(1):after {content: '12am';}
+.timeline:first-child .timeunit:nth-child(2):after {content: '1am';}
+.timeline:first-child .timeunit:nth-child(3):after {content: '2am';}
+.timeline:first-child .timeunit:nth-child(4):after {content: '3am';}
+.timeline:first-child .timeunit:nth-child(5):after {content: '4am';}
+.timeline:first-child .timeunit:nth-child(6):after {content: '5am';}
+.timeline:first-child .timeunit:nth-child(7):after {content: '6am';}
+.timeline:first-child .timeunit:nth-child(8):after {content: '7am';}
+.timeline:first-child .timeunit:nth-child(9):after {content: '8am';}
+.timeline:first-child .timeunit:nth-child(10):after {content: '9am';}
+.timeline:first-child .timeunit:nth-child(11):after {content: '10am';}
+.timeline:first-child .timeunit:nth-child(12):after {content: '11am';}
+.timeline:first-child .timeunit:nth-child(13):after {content: '12pm';}
+.timeline:first-child .timeunit:nth-child(14):after {content: '1pm';}
+.timeline:first-child .timeunit:nth-child(15):after {content: '2pm';}
+.timeline:first-child .timeunit:nth-child(16):after {content: '3pm';}
+.timeline:first-child .timeunit:nth-child(17):after {content: '4pm';}
+.timeline:first-child .timeunit:nth-child(18):after {content: '5pm';}
+.timeline:first-child .timeunit:nth-child(19):after {content: '6pm';}
+.timeline:first-child .timeunit:nth-child(20):after {content: '7pm';}
+.timeline:first-child .timeunit:nth-child(21):after {content: '8pm';}
+.timeline:first-child .timeunit:nth-child(22):after {content: '9pm';}
+.timeline:first-child .timeunit:nth-child(23):after {content: '10pm';}
+.timeline:first-child .timeunit:nth-child(24):after {content: '11pm';}
+
+.timespan {
+    position: absolute;
+    top: 0;
+    height: 90%;
+    background: black;
+    background: var(--color-1);
+    border-radius: 0 0 6px 6px;
+}
+.timespan a {
+    width: 100%;
+    height: 100%;
+    display: block;
 }
