added readme, changed colors, removed bs4 and noted it in

--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 :root {
-    --color-1: #137;
-    --color-1a: rgba(17, 51, 119, 0);
-    --color-1a: #1370;
-    --color-2: #58d;
-    --color-3: #7af;
+    --color-1: #541;
+    --color-1a: rgba(85, 68, 17, 0);
+    --color-1a: #5410;
+    --color-2: #eb4;
+    --color-3: #fe9;
 }
 
 html {
