--- a/index.css
+++ b/index.css
@@ -15,10 +15,13 @@ html {
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 0;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch; /* ios */
+
 }
 
 #map iframe {
+    position: absolute;
     width: 100%;
     height: 100%;
     border: none;
@@ -32,6 +35,8 @@ html {
     background: var(--color-2);
     color: white;
     color: var(--color-3);
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch; /* ios */
 }
 #legend.noclass:before {
     content: 'No results.';
@@ -105,9 +110,7 @@ li:hover, li.selected {
     z-index: 1;
 }
 
-#scroller {
-    width: 100%;
-    height: 100%;
+.scroller {
     overflow: scroll;
     -webkit-overflow-scrolling: touch; /* ios */
 }
